kubernetes/Ingress-ALB/ingress-argo.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    # Listener must be HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'

    # ACM certificate
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:573967297194:certificate/87b1553d-e378-4873-8442-fe0ef9d87622
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/subnets: subnet-04e71e18cd6147577,subnet-0612ae5d2f3a65b62,subnet-0b3931e704a78194b
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
    alb.ingress.kubernetes.io/healthcheck-port: "443"
    alb.ingress.kubernetes.io/healthcheck-path: /

spec:
  rules:
    - host: argocd.devinfratech.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
